--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
     href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Big+Shoulders+Inline+Text:wght@100..900&family=Bungee+Inline&family=Racing+Sans+One&family=Rowdies:wght@300;400;700&family=Tilt+Warp&display=swap"
     rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Abel&family=Bungee+Inline&family=Gruppo&family=Inder&family=Sulphur+Point:wght@300;400;700&display=swap"
+    rel="stylesheet">
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Albo Barber</title>
 </head>
 
 <body>
