--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Descubre Albo Barbería, la mejor barbería en Colonia del Sacramento. Ofrecemos cortes modernos, horarios flexibles y una ubicación céntrica.">
+
+  <meta name="google-site-verification" content="3wXYXEVtu8tr5RzkebLq75AwlAyYmnPQdU3eftIHaKg" />
   <!-- Bootstrap CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,10 +41,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Albo Barber</title>
+  <title>Albo Barbería</title>
 </head>
 
 <body>
+
+  <h1 style="display: none;">Albo Barbería: La mejor barbería en Colonia del Sacramento</h1>
+
+  
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
